frontend/src/css/index.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

#root {
  width: 100%;
}

:root {
  --max-width: 1250px;
  --text-white: rgba(255, 255, 255, 0.87);
  --text-gray: #c9c8c8;
  --text-gray--dark: #b3b1b1;
  --text-black: black;
  --link-color: #646cff;
  --link-color-hover: #535bf2;
  --background-color: #24242414;
  /* --background-color: #242424; */
  --button-border-color: #8b90e8;
  --button-border-color-hover: #646cff;
  --font: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;

  font-family: var(--font);
  text-align: center;

  line-height: 1.5;

  color-scheme: light dark;
  color: var(--text-white);
  background-color: var(--background-color);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  scroll-behavior: smooth;

  --breakpoint-xs: 450px;
  --breakpoint-sm: 576px;
  --breakpoint-md: 768px;
  --breakpoint-lg: 992px;
  --breakpoint-xl: 1200px;
  --breakpoint-xxl: 1400px;
}

a {
  font-weight: 500;
  color: var(--link-color);
  text-decoration: inherit;
}

a:hover {
  color: var(--link-color-hover);
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

h2 {
  font-weight: 500;
}

.button {
  border-radius: 8px;
  border: 1px solid var(--button-border-color);
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}

.button:hover {
  border-color: var(--button-border-color-hover);
}

